--- a/css/style.css
+++ b/css/style.css
@@ -804,89 +804,93 @@ nav.open {
     height: 100%;
     width: 80%;
     background-color: #f4f4f4; }
-    .work-wrapper--inner .right-info .all-project-wrapper .project {
-      -webkit-transform: translate3d(0px, 11px, 0px);
-      height: 5.8em;
-      overflow: hidden;
-      width: 99%;
-      position: relative;
-      top: -.5em;
-      border-top: 0.5em #f4f4f4 solid;
-      border-bottom: 0.5em #f4f4f4 solid;
-      border-right: 3.5em #f4f4f4 solid;
-      cursor: pointer; }
-      .work-wrapper--inner .right-info .all-project-wrapper .project .p-info {
-        margin-top: 2.9em;
-        z-index: 300;
-        position: absolute;
-        width: 37%;
-        background-color: rgba(39, 39, 55, 0.97);
-        color: #f4f4f4;
-        padding: 10px 5px;
-        left: -100%;
-        top: 0; }
-      .work-wrapper--inner .right-info .all-project-wrapper .project .p-links {
-        width: 150px;
-        height: auto;
-        text-align: center;
-        position: absolute;
-        top: -20em;
-        right: 0;
-        z-index: 300;
-        margin-top: 40px;
-        background-color: #f4f4f4; }
-        .work-wrapper--inner .right-info .all-project-wrapper .project .p-links a {
-          padding: 15px 10px;
-          display: block; }
-      .work-wrapper--inner .right-info .all-project-wrapper .project .p-p {
-        position: absolute;
-        z-index: 200;
-        width: 100%;
-        height: 100%;
-        background-image: url("../images/line-pattern.png");
-        background-repeat: repeat;
-        background-color: rgba(0, 0, 0, 0.51);
-        -webkit-transition: all 0.2s ease;
-        -moz-transition: all 0.2s ease;
-        transition: all 0.2s ease; }
-        .work-wrapper--inner .right-info .all-project-wrapper .project .p-p:hover {
-          background-color: rgba(255, 255, 255, 0.11);
-          -webkit-transition: all 0.3s ease;
-          -moz-transition: all 0.3s ease;
-          transition: all 0.3s ease; }
-      .work-wrapper--inner .right-info .all-project-wrapper .project .p-bg {
-        opacity: 1;
-        z-index: 100;
-        width: 100%;
-        height: 100%;
+    .work-wrapper--inner .right-info .all-project-wrapper {
+      overflow-x: hidden;
+      overflow-y: scroll;
+      height: 100%; }
+      .work-wrapper--inner .right-info .all-project-wrapper .project {
+        -webkit-transform: translate3d(0px, 11px, 0px);
+        height: 5.8em;
+        overflow: hidden;
+        width: 99%;
         position: relative;
-        background-position: center;
-        background-size: cover;
-        background-repeat: no-repeat; }
-      .work-wrapper--inner .right-info .all-project-wrapper .project .p-title {
-        font-family: "Roboto", "Open Sans", Helvetica, Arial, sans-serif;
-        font-weight: 100;
-        font-size: 1.6em;
-        text-align: center;
-        background-color: rgba(39, 39, 55, 0.97);
-        width: auto;
-        min-width: 37%;
-        height: 35px;
-        padding: 0 5px;
-        z-index: 300;
-        position: absolute;
-        color: #f4f4f4;
-        line-height: 1.5; }
-      .work-wrapper--inner .right-info .all-project-wrapper .project .p-type {
-        line-height: 2.5;
-        right: 0;
-        text-align: center;
-        background-color: #f4f4f4;
-        width: 150px;
-        height: 35px;
-        z-index: 400;
-        position: absolute;
-        color: #272737; }
+        top: -.5em;
+        border-top: 0.5em #f4f4f4 solid;
+        border-bottom: 0.5em #f4f4f4 solid;
+        border-right: 3.5em #f4f4f4 solid;
+        cursor: pointer; }
+        .work-wrapper--inner .right-info .all-project-wrapper .project .p-info {
+          margin-top: 2.9em;
+          z-index: 300;
+          position: absolute;
+          width: 37%;
+          background-color: rgba(39, 39, 55, 0.97);
+          color: #f4f4f4;
+          padding: 10px 5px;
+          left: -100%;
+          top: 0; }
+        .work-wrapper--inner .right-info .all-project-wrapper .project .p-links {
+          width: 150px;
+          height: auto;
+          text-align: center;
+          position: absolute;
+          top: -20em;
+          right: 0;
+          z-index: 300;
+          margin-top: 40px;
+          background-color: #f4f4f4; }
+          .work-wrapper--inner .right-info .all-project-wrapper .project .p-links a {
+            padding: 15px 10px;
+            display: block; }
+        .work-wrapper--inner .right-info .all-project-wrapper .project .p-p {
+          position: absolute;
+          z-index: 200;
+          width: 100%;
+          height: 100%;
+          background-image: url("../images/line-pattern.png");
+          background-repeat: repeat;
+          background-color: rgba(0, 0, 0, 0.51);
+          -webkit-transition: all 0.2s ease;
+          -moz-transition: all 0.2s ease;
+          transition: all 0.2s ease; }
+          .work-wrapper--inner .right-info .all-project-wrapper .project .p-p:hover {
+            background-color: rgba(255, 255, 255, 0.11);
+            -webkit-transition: all 0.3s ease;
+            -moz-transition: all 0.3s ease;
+            transition: all 0.3s ease; }
+        .work-wrapper--inner .right-info .all-project-wrapper .project .p-bg {
+          opacity: 1;
+          z-index: 100;
+          width: 100%;
+          height: 100%;
+          position: relative;
+          background-position: center;
+          background-size: cover;
+          background-repeat: no-repeat; }
+        .work-wrapper--inner .right-info .all-project-wrapper .project .p-title {
+          font-family: "Roboto", "Open Sans", Helvetica, Arial, sans-serif;
+          font-weight: 100;
+          font-size: 1.6em;
+          text-align: center;
+          background-color: rgba(39, 39, 55, 0.97);
+          width: auto;
+          min-width: 37%;
+          height: 35px;
+          padding: 0 5px;
+          z-index: 300;
+          position: absolute;
+          color: #f4f4f4;
+          line-height: 1.5; }
+        .work-wrapper--inner .right-info .all-project-wrapper .project .p-type {
+          line-height: 2.5;
+          right: 0;
+          text-align: center;
+          background-color: #f4f4f4;
+          width: 150px;
+          height: 35px;
+          z-index: 400;
+          position: absolute;
+          color: #272737; }
 
 #project-video {
   position: static;
